--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ button {
   outline: none;
   width: 200px;
   height: 50px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Orbitron', sans-serif;
   font-size: 20px;
   color: white;
   background: #ff3482;
